2007-02-04  GatoLoko  <GatoLoko@gmail.com>

 * Documentadas las funciones para gestion de feeds RSS/RDF.
 * Modificadas las opciones del menu para poder añadir o quitar nuevos feeds
    de forma grafica.
 * Publicado como RC2


2007-02-02  GatoLoko  <GatoLoko@gmail.com>

 * Modificadas las funciones rss_cb y rsslista_cb para que almacenen y lean
     la lista de feeds del archivo de configuracion en lugar de un archivo
     independiente.
 * Agregado el comando "rssadd" para agregar un nuevo feed a la lista.
 * Agregado el comando "rssdel" para eliminar un feed de la lista.


2007-01-25  GatoLoko  <GatoLoko@gmail.com>

 * Corregido el bug que probocaba la ejecucion de Rhythmbox o Banshee al
    cargar el script.
 * Publicado como RC1


2007-01-22  GatoLoko  <GatoLoko@gmail.com>

 * Agregada la funcion azureus_cb y el comando "/azureus" para mostrar
     informacion sobre las transferencias de este programa.
 * Modificado el menu para activar el acceso a la funcion azureus_cb.


2007-01-22  GatoLoko  <GatoLoko@gmail.com>

 * Agregada la funcion "rss_cb" que muestra las noticias recientes de los
     de los feeds configurados.
 * Agregada la funcion "rsslista_cb" que muestra la lista de feeds.
 * Cambiado el formato del Changelog. Las entradas anteriores se conservan
    con fecha 31 de diciembre del 2006.
 * Agregada la ayuda para las funciones de gestion RSS.
 * Publicado como beta2.


2006-12-31  GatoLoko  <GatoLoko@gmail.com>

###############################################################################
#
# Cambios en versiones anteriores a la 0.3:
#    No lleve la cuenta :p
#
# Cambios en 0.3:
#    Extraidos los consejos al archivo "consejos.txt".
#    Agregado el comando "/consejos" para mostrar consejos aleatorios.
#    Agregado el comando "/consejo" para mostrar consejos concretos.
#    Agregado el comando "/gato" para mostrar una lista de comandos disponibles
#    Limpiada la salida del uptime.
#    Corregido el numero de pista mostrado por "/gxm".
#