@@ -1,7 +1,7 @@
 [protecciones]
 ban = 0
 ctcps = 1
-hoygan = 1
+hoygan = 0
 canales = #ubuntu,#gatoscript
 
 [media]
@@ -13,5 +13,5 @@ remotos = 0
 whois = 1
 
 [rss]
-feeds = http://gatoloko.homelinux.org/index.php?q=rss.xml,http://www.slashdot.com/slashdot.rss,http://www.media-vida.net/mediavida.rdf,
+feeds = http://gatoloko.homelinux.org/index.php?q=rss.xml,http://www.slashdot.com/slashdot.rss,http://www.media-vida.net/mediavida.rdf
 
